--- a/Noise/Noise/Presentation/Base.lproj/Main.storyboard
+++ b/Noise/Noise/Presentation/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -35,7 +36,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="120" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ePM-VX-fPx">
-                                <rect key="frame" x="0.0" y="73" width="375" height="545"/>
+                                <rect key="frame" x="0.0" y="73" width="375" height="485"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="QcX-af-7hf">
                                     <rect key="frame" x="0.0" y="148" width="375" height="98"/>
@@ -154,7 +155,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="OxZ-HI-F5K" firstAttribute="leading" secondItem="J6f-aA-Uac" secondAttribute="trailing" constant="16" id="4m7-wr-I8i"/>
-                            <constraint firstItem="ePM-VX-fPx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="HBv-BO-0AD"/>
+                            <constraint firstItem="ePM-VX-fPx" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" constant="-60" id="HBv-BO-0AD"/>
                             <constraint firstItem="ePM-VX-fPx" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Pmu-nx-MEO"/>
                             <constraint firstItem="ePM-VX-fPx" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="PwT-tX-Rio"/>
                             <constraint firstItem="J6f-aA-Uac" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="Qew-bz-4CQ"/>
@@ -334,20 +335,15 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rU7-Qy-SfH">
-                                <rect key="frame" x="0.0" y="73" width="375" height="545"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="rU7-Qy-SfH">
+                                <rect key="frame" x="0.0" y="73" width="375" height="485"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <view key="tableFooterView" contentMode="scaleToFill" id="V3I-4o-8EZ">
-                                    <rect key="frame" x="0.0" y="128" width="375" height="98"/>
-                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SoundTableViewCell" rowHeight="100" id="WLg-ah-URZ" customClass="SoundTableViewCell" customModule="Noise" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="100"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="WLg-ah-URZ" id="r3W-cd-xjb" customClass="Sounds">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="99.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sound_heavy_rain" translatesAutoresizingMaskIntoConstraints="NO" id="zBd-qI-i5E" customClass="RoundedImageView" customModule="Noise" customModuleProvider="target">
@@ -370,27 +366,27 @@
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m9s-Yf-u5w">
-                                                                    <rect key="frame" x="0.0" y="23" width="265" height="7"/>
+                                                                    <rect key="frame" x="0.0" y="23" width="265" height="17"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                     <nil key="textColor"/>
                                                                     <nil key="highlightedColor"/>
                                                                 </label>
                                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kzR-Aj-Zfn">
-                                                                    <rect key="frame" x="0.0" y="30" width="265" height="50"/>
+                                                                    <rect key="frame" x="0.0" y="40" width="265" height="40"/>
                                                                     <subviews>
                                                                         <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="0.0" maxValue="100" translatesAutoresizingMaskIntoConstraints="NO" id="Wtz-Md-I74">
-                                                                            <rect key="frame" x="24" y="20" width="217" height="31"/>
+                                                                            <rect key="frame" x="24" y="10" width="217" height="31"/>
                                                                             <color key="minimumTrackTintColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
                                                                         </slider>
                                                                         <imageView userInteractionEnabled="NO" alpha="0.30000001192092896" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_sound_full" translatesAutoresizingMaskIntoConstraints="NO" id="Hqy-Tw-1qV">
-                                                                            <rect key="frame" x="249" y="27" width="16" height="16"/>
+                                                                            <rect key="frame" x="249" y="17" width="16" height="16"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="width" constant="16" id="ZZ9-NL-mxN"/>
                                                                                 <constraint firstAttribute="height" constant="16" id="nWd-no-ZdN"/>
                                                                             </constraints>
                                                                         </imageView>
                                                                         <imageView userInteractionEnabled="NO" alpha="0.30000001192092896" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_sound_mute" translatesAutoresizingMaskIntoConstraints="NO" id="Vfb-X1-BQk">
-                                                                            <rect key="frame" x="0.0" y="27" width="16" height="16"/>
+                                                                            <rect key="frame" x="0.0" y="17" width="16" height="16"/>
                                                                             <constraints>
                                                                                 <constraint firstAttribute="height" constant="16" id="hUF-M0-74a"/>
                                                                                 <constraint firstAttribute="width" constant="16" id="u8z-h3-LnV"/>
@@ -435,6 +431,57 @@
                                             <outlet property="soundTitleLabel" destination="3X3-zh-w4V" id="PBC-BF-VYS"/>
                                         </connections>
                                     </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="PlaceholderTableViewCell" rowHeight="300" id="Z8a-XX-ZF5" customClass="ButtonTableViewCell" customModule="Noise" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="128" width="375" height="300"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Z8a-XX-ZF5" id="GtI-x1-OFi" customClass="Sounds">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="300"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="JtV-O3-UAT">
+                                                    <rect key="frame" x="35" y="35" width="305" height="242"/>
+                                                </imageView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="JtV-O3-UAT" firstAttribute="leading" secondItem="GtI-x1-OFi" secondAttribute="leadingMargin" constant="20" id="Nm6-rM-mrG"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="JtV-O3-UAT" secondAttribute="bottom" constant="12" id="ldA-hg-ElL"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="JtV-O3-UAT" secondAttribute="trailing" constant="20" id="pao-lh-W30"/>
+                                                <constraint firstItem="JtV-O3-UAT" firstAttribute="top" secondItem="GtI-x1-OFi" secondAttribute="topMargin" constant="24" id="yz4-EM-7p1"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ButtonTableViewCell" rowHeight="69" id="8MA-VJ-XkN" customClass="ButtonTableViewCell" customModule="Noise" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="428" width="375" height="69"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8MA-VJ-XkN" id="bYS-3R-Thi" customClass="Sounds">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3U0-qc-2YQ" customClass="PrimaryButton" customModule="Noise" customModuleProvider="target">
+                                                    <rect key="frame" x="27" y="23" width="321" height="45"/>
+                                                    <color key="backgroundColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="45" id="yJl-BK-QwB"/>
+                                                    </constraints>
+                                                    <color key="tintColor" red="1" green="0.1764705882" blue="0.33333333329999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <state key="normal" title="Close">
+                                                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    </state>
+                                                    <connections>
+                                                        <action selector="closeButtonPressed:" destination="JyD-VS-6D8" eventType="touchUpInside" id="nSx-kO-rFf"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="3U0-qc-2YQ" firstAttribute="leading" secondItem="bYS-3R-Thi" secondAttribute="leadingMargin" constant="12" id="82F-gh-OjK"/>
+                                                <constraint firstItem="3U0-qc-2YQ" firstAttribute="top" secondItem="bYS-3R-Thi" secondAttribute="topMargin" constant="12" id="Xdk-Ah-iV2"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="3U0-qc-2YQ" secondAttribute="trailing" constant="12" id="oL2-EZ-q3l"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="button" destination="3U0-qc-2YQ" id="bdC-GD-lsh"/>
+                                        </connections>
+                                    </tableViewCell>
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mixtapes" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D1l-Wm-HkM">
@@ -454,7 +501,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="D1l-Wm-HkM" firstAttribute="leading" secondItem="hYG-MW-Xg0" secondAttribute="leading" constant="16" id="06y-MS-PSN"/>
-                            <constraint firstItem="rU7-Qy-SfH" firstAttribute="bottom" secondItem="hYG-MW-Xg0" secondAttribute="bottom" id="07r-jp-L7g"/>
+                            <constraint firstItem="rU7-Qy-SfH" firstAttribute="bottom" secondItem="hYG-MW-Xg0" secondAttribute="bottom" constant="-60" id="07r-jp-L7g"/>
                             <constraint firstItem="rU7-Qy-SfH" firstAttribute="leading" secondItem="hYG-MW-Xg0" secondAttribute="leading" id="8Kc-8h-nel"/>
                             <constraint firstItem="rU7-Qy-SfH" firstAttribute="trailing" secondItem="hYG-MW-Xg0" secondAttribute="trailing" id="Fcl-FV-PVX"/>
                             <constraint firstItem="zAV-2L-TVY" firstAttribute="leading" secondItem="D1l-Wm-HkM" secondAttribute="trailing" constant="16" id="IxZ-w7-yLm"/>
@@ -481,6 +528,7 @@
         <image name="ic_settings" width="33" height="33"/>
         <image name="ic_sound_full" width="33" height="33"/>
         <image name="ic_sound_mute" width="33" height="33"/>
+        <image name="placeholder" width="273" height="249"/>
         <image name="sound_coffee_shop" width="631" height="436"/>
         <image name="sound_heavy_rain" width="640" height="426"/>
     </resources>
